--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,6 @@ discord.py
 google-api-python-client
 google-auth-httplib2
 google-auth-oauthlib
-google-generativeai
+google-genai
 python-dotenv
+PyNaCl
