--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-# Python dependencies
 discord.py
 google-api-python-client
 google-auth-httplib2
 google-auth-oauthlib
-google-genai
+google-generativeai
 python-dotenv
 PyNaCl
